# personal-page

./: .env.example  .gitignore  .prettierignore  .prettierrc.mjs  .vercelignore  LICENSE  README.md  astro.config.mjs  eslint.config.js  events.json  package-lock.json  package.json  state.json  vercel.json
worker/: README.md  pyproject.toml  requirements-inference.txt  requirements.txt
worker/data/: qa_channel_blocklist.json  reference_cache.json
worker/deploy/: SETUP_GHA.md  gha_secrets.env.template  run_local_daemon.sh  upload_assets.sh
worker/docs/: DATA_SCOPING.md  FNET_MT_CATALOGUE.md  INFERENCE_BACKEND.md  LIVE_MONITOR.md  UPDATE_GUIDE.md  iris_japan_candidates.csv
worker/fnet/: README.md  alt_qa.py  availability_qa.py  batch_test.py  conftest.py  conv_test.py  fetch_fnet.py  qa_probe.py  split_test.py  test_fetch_fnet_offline.py  test_fetch_window_offline.py
worker/fnet_monitor/: __init__.py  build_demo_catalogue.py  build_real_catalogue.py  catalogue.py  config.py  contract.py  demo.py  fetch_references.py  fnet_mt.py  inference.py  live_event.py  monitor.py  mt_serialize.py  npe_backend.py  qa.py  qa_validation.py  quakeml.py  reclassify.py  references.py  run.py  source_type.py  sources.py  state.py  store.py  synthetic.py  util.py
worker/tests/: test_catalogue.py  test_contract.py  test_domain_filter.py  test_fnet_mt.py  test_integration_pipeline.py  test_live_event.py  test_live_pipeline.py  test_monitor.py  test_monitor_usgs.py  test_mt_serialize.py  test_npe_backend.py  test_qa.py  test_quakeml.py  test_references.py  test_run_mock.py  (+6 more)
(+325 files in other folders)
